profil page done

--- a/profile.html
+++ b/profile.html
@@ -17,15 +17,15 @@
           <img src="assets/profile_filled.png" alt="" />
           <h2 class="profile__container__name">Ali Dilek</h2>
         </section>
-        <h3 class="profile__container__about-me">
-          <title>About me</title>
+        <div class="profile__container__about-me">
+          <h4>About me</h4>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil quas
             doloremque officiis facilis eius minima laborum tempore repellat
             dolorum ipsa fugiat, sapiente distinctio nisi nulla corrupti natus
             labore vitae tenetur!
           </p>
-        </h3>
+        </div>
       </section>
       <section class="counters">
         <section class="question-counter">
@@ -34,6 +34,10 @@
         <section class="bookmark-counter">
           <img src="assets/bookmark_filled.png" class="profilicon" alt="" />
         </section>
+      </section>
+      <section class="settings">
+        <h6>Settings</h6>
+        <h7>Switch mode</h7>
       </section>
     </main>
     <footer class="nav-bar">
@@ -49,8 +53,7 @@
         <img
           src="assets/bookmark_transparent.png"
           alt="Bookmarks"
-          width="50px
-              "
+          width="50px"
           height="50px"
         />
       </a>
