profil page done

--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
           <h2 class="profile__container__name">Ali Dilek</h2>
         </section>
         <div class="profile__container__about-me">
-          <h4>About me</h4>
+          <h3>About me</h3>
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil quas
             doloremque officiis facilis eius minima laborum tempore repellat
@@ -30,14 +30,20 @@
       <section class="counters">
         <section class="question-counter">
           <img src="assets/question.png" class="profilicon" alt="" />
+          <h4>4</h4>
         </section>
         <section class="bookmark-counter">
           <img src="assets/bookmark_filled.png" class="profilicon" alt="" />
+          <h5>1</h5>
         </section>
       </section>
       <section class="settings">
         <h6>Settings</h6>
         <h7>Switch mode</h7>
+        <label class="switch">
+          <input type="checkbox" />
+          <span class="slider round"></span>
+        </label>
       </section>
     </main>
     <footer class="nav-bar">
