--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <span>Show answer!</span>
         </button>
         <img
-          src="assets/bookmark.png"
+          src="./assets/bookmark.png"
           alt="bookmark"
           class="card__bookmark"
           width="50px"
@@ -36,7 +36,7 @@
           <span>Show answer!</span>
         </button>
         <img
-          src="assets/bookmark.png"
+          src="./assets/bookmark.png"
           alt="bookmark"
           class="card__bookmark"
           width="50px"
@@ -54,7 +54,7 @@
           <span>Show answer!</span>
         </button>
         <img
-          src="assets/bookmark.png"
+          src="./assets/bookmark.png"
           alt="bookmark"
           class="card__bookmark"
           width="50px"
@@ -73,7 +73,7 @@
           <span>Show answer!</span>
         </button>
         <img
-          src="assets/bookmark.png"
+          src="./assets/bookmark.png"
           alt="bookmark"
           class="card__bookmark"
           width="50px"
@@ -88,32 +88,14 @@
       </section>
     </main>
     <footer class="nav-bar">
-      <a href="index.html" class="footer__link">
-        <img
-          src="assets/home_filled.png"
-          alt=" Home Page"
-          width="50px
-            "
-          height="50px"
-        />
+      <a href="./index.html" class="footer__link">
+        <img src="assets/home_filled.png" alt=" Home Page" />
       </a>
-      <a href="bookmark.html" class="footer__link">
-        <img
-          src="assets/bookmark_transparent.png"
-          alt="Bookmarks"
-          width="50px
-          "
-          height="50px"
-        />
+      <a href="./bookmark.html" class="footer__link">
+        <img src="./assets/bookmark_transparent.png" alt="Bookmarks" />
       </a>
-      <a href="profile.html" class="footer__link">
-        <img
-          src="assets/profile.png"
-          alt="Profile"
-          width="50px
-              "
-          height="50px"
-        />
+      <a href="./profile.html" class="footer__link">
+        <img src="./assets/profile.png" alt="Profile" />
       </a>
     </footer>
   </body>
