--- a/index.html
+++ b/index.html
@@ -13,75 +13,77 @@
       <h1>Quiz App</h1>
     </header>
     <main>
-      <section class="card__container">
-        <h2>What property flips the axes in the flexbox?</h2>
-        <button>
-          <span>Show answer!</span>
-        </button>
+      <section class="card">
+        <h2 class="card__question">
+          What property flips the axes in the flexbox?
+        </h2>
+        <button class="card__button">
+          Show answer!
+        </button class="card__button">
         <img
           src="./assets/bookmark.png"
           alt="bookmark"
           class="card__bookmark"
           width="50px"
         />
-        <ul class="tags">
-          <li class="tagsr">#html</li>
-          <li class="tagsr">#css</li>
-          <li class="tagsr">#js</li>
+        <ul class="card__tags">
+          <li class="card__tags__item">#html</li>
+          <li class="card__tags__item">#css</li>
+          <li class="card__tags__item">#js</li>
         </ul>
       </section>
-      <section class="card__container">
+      <section class="card">
         <h2>Question 2</h2>
-        <button>
-          <span>Show answer!</span>
-        </button>
+        <button class="card__button">
+          Show answer!
+        </button class="card__button">
         <img
           src="./assets/bookmark.png"
           alt="bookmark"
           class="card__bookmark"
           width="50px"
         />
-        <ul class="tags">
-          <li class="tagsr">#html</li>
-          <li class="tagsr">#css</li>
-          <li class="tagsr">#js</li>
+        <ul class="card__tags">
+          <li class="card__tags__item">#html</li>
+          <li class="card__tags__item">#css</li>
+          <li class="card__tags__item">#js</li>
         </ul>
         <div class="tags__container"></div>
       </section>
-      <section class="card__container">
+      <section class="card">
         <h2>Question 3</h2>
-        <button>
-          <span>Show answer!</span>
-        </button>
+        <button class="card__button">
+          Show answer!
+        </button class="card__button">
         <img
           src="./assets/bookmark.png"
           alt="bookmark"
           class="card__bookmark"
           width="50px"
         />
-        <ul class="tags">
-          <li class="tagsr">#html</li>
-          <li class="tagsr">#css</li>
-          <li class="tagsr">#js</li>
+        <ul class="card__tags">
+          <li class="card__tags__item">#html</li>
+          <li class="card__tags__item">#css</li>
+          <li class="card__tags__item">#js</li>
         </ul>
 
         <div class="tags__container"></div>
       </section>
-      <section class="card__container">
+      <section class="card">
         <h2>Question 4</h2>
-        <button>
-          <span>Show answer!</span>
-        </button>
+        <button class="card__button">
+          Show answer!
+        </button class="card__button">
         <img
           src="./assets/bookmark.png"
           alt="bookmark"
           class="card__bookmark"
           width="50px"
         />
-        <ul class="tags">
-          <li class="tagsr">#html</li>
-          <li class="tagsr">#css</li>
-          <li class="tagsr">#js</li>
+        <ul class="card__tags">
+          <li class="card__tags__item">#html</li>
+          <li class="card__tags__item">#css</li>
+          <li class="card__tags__item">#js</li>
         </ul>
 
         <div class="tags__container"></div>
