--- a/profile.html
+++ b/profile.html
@@ -13,10 +13,10 @@
     </header>
     <main>
       <section class="profile">
-        <section class="profile__container">
+        <div class="profile__container">
           <img src="assets/profile_filled.png" alt="" />
           <h2 class="profile__container__name">Ali Dilek</h2>
-        </section>
+        </div>
         <div class="profile__container__about-me">
           <h3>About me</h3>
           <p>
@@ -32,11 +32,14 @@
           <img src="assets/question.png" class="profilicon" alt="" />
           <h4>4</h4>
         </section>
+      </section>
+      <section class="counters">
         <section class="bookmark-counter">
           <img src="assets/bookmark_filled.png" class="profilicon" alt="" />
           <h5>1</h5>
         </section>
       </section>
+
       <section class="settings">
         <h6>Settings</h6>
         <h7>Switch mode</h7>
