--- a/bookmark.html
+++ b/bookmark.html
@@ -12,21 +12,21 @@
       <h1>Bookmarks</h1>
     </header>
     <main>
-      <section class="card__container">
+      <section class="card">
         <h2>What property flips the axes in the flexbox?</h2>
-        <button>
-          <span>Show answer!</span>
-        </button>
+        <button class="card__button">
+          Show answer!
+        </button class="card__button">
         <img
           src="assets/bookmark_filled.png"
           alt="bookmark"
           class="card__bookmark"
           width="50px"
         />
-        <ul class="tags">
-          <li class="tagsr">#html</li>
-          <li class="tagsr">#css</li>
-          <li class="tagsr">#js</li>
+        <ul class="card__tags">
+          <li class="card__tags__item">#html</li>
+          <li class="card__tags__item">#css</li>
+          <li class="card__tags__item">#js</li>
         </ul>
       </section>
     </main>
