--- a/form.html
+++ b/form.html
@@ -4,44 +4,33 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bookmark page</title>
+    <title>Document</title>
     <link rel="stylesheet" href="global.css" />
     <script src="script.js" defer></script>
-
   </head>
   <body class="body">
     <header class="site-header">
-      <h1>Bookmarks</h1>
+      <h1>Quiz App</h1>
     </header>
-    <main>
-      <section class="card">
-        <h2>What property flips the axes in the flexbox?</h2>
-        <button class="card__button">
-          Show answer!
-        </button class="card__button">
-        <img
-          src="assets/bookmark_filled.png"
-          alt="bookmark"
-          class="card__bookmark"
-          width="50px"
-        />
-        <ul class="card__tags">
-          <li class="card__tags__item">#html</li>
-          <li class="card__tags__item">#css</li>
-          <li class="card__tags__item">#js</li>
-        </ul>
-      </section>
-    </main>
+    <section class="card">
+      <label for="story">Tell us your story:</label>
+
+      <textarea id="story" name="story" rows="5" cols="33">
+ It was a dark and stormy night...
+        </textarea
+      >
+    </section>
+
     <footer class="nav-bar">
       <a href="./index.html" class="footer__link">
-        <img src="assets/home.png" alt=" Home Page" />
+        <img src="assets/home_filled.png" alt=" Home Page" />
       </a>
       <a href="./bookmark.html" class="footer__link">
-        <img src="./assets/bookmark_filled.png" alt="Bookmarks" />
+        <img src="./assets/bookmark_transparent.png" alt="Bookmarks" />
       </a>
       <a href="./form.html" class="footer__link">
         <img src="./assets/write.png" alt="form" />
-        </a>
+      </a>
       <a href="./profile.html" class="footer__link">
         <img src="./assets/profile.png" alt="Profile" />
       </a>
