--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile page</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="global.css" />
+    <script src="script.js" defer></script>
   </head>
   <body class="body">
     <header class="site-header">
@@ -50,30 +51,17 @@
       </section>
     </main>
     <footer class="nav-bar">
-      <a href="index.html" class="footer__link">
-        <img
-          src="assets/home.png"
-          alt=" Home Page"
-          width="50px"
-          height="50px"
-        />
+      <a href="./index.html" class="footer__link">
+        <img src="assets/home.png" alt=" Home Page" />
       </a>
-      <a href="bookmark.html" class="footer__link">
-        <img
-          src="assets/bookmark_transparent.png"
-          alt="Bookmarks"
-          width="50px"
-          height="50px"
-        />
+      <a href="./bookmark.html" class="footer__link">
+        <img src="./assets/bookmark_transparent.png" alt="Bookmarks" />
       </a>
-      <a href="profile.html" class="footer__link">
-        <img
-          src="assets/profile_filled.png"
-          alt="Profile"
-          width="50px
-                  "
-          height="50px"
-        />
+      <a href="./form.html" class="footer__link">
+        <img src="./assets/write.png" alt="form" />
+      </a>
+      <a href="./profile.html" class="footer__link">
+        <img src="./assets/profile_filled.png" alt="Profile" />
       </a>
     </footer>
   </body>
