--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button class="card__button"> 
           Show answer!
         </button>
-        <p class="hide" id="answer_text">Great Axes</p>
+        <p class="hide" id="answer_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore illo veritatis rem cum suscipit commodi dolore culpa fugit impedit, ratione, voluptates quia. Quos dignissimos non neque! Numquam tempore autem ducimus? </p>
          </div>
 
         <img 
